# Payment-Tracker-Pro

./: .gitignore  README.md  deploy-notes.md  index.html  npm_log.txt  package-lock.json  package.json  test_log.txt  vite.config.ts
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/fee_registry/: Cargo.toml
contracts/fee_registry/src/: lib.rs  test.rs
contracts/fee_registry/test_snapshots/test/: test_log_fee.1.json
contracts/live_poll/: Cargo.toml
contracts/live_poll/src/: lib.rs  test.rs
contracts/payment_tracker/: Cargo.toml
contracts/payment_tracker/src/: lib.rs  test.rs
contracts/payment_tracker/test_snapshots/test/: test_record_and_update_payment.1.json
scripts/: deploy.ps1  deploy.sh
src/: App.tsx  index.css
src/components/: ActivityFeed.tsx  ErrorBanner.test.tsx  ErrorBanner.tsx  PaymentHistoryTable.tsx  PollCard.tsx  ResultsDisplay.tsx  SendPaymentForm.tsx  TxStatusTracker.test.tsx  WalletSelector.tsx
src/lib/: soroban.ts  stellar.ts  types.ts  wallet.ts
